nifi-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: nifi
spec:
  selector:
    app: nifi
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30085
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi
spec:
  selector:
    matchLabels:
      app: nifi
  replicas: 1
  template:
    metadata:
      labels:
        app: nifi
    spec:
      containers:
        - name: nifi
          image: apache/nifi:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
