ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /alpha-service
        backend:
          serviceName: alpha-service
          servicePort: 9191
      - path: /beta-service
        backend:
          serviceName: beta-service
          servicePort: 9192
      - path: /nifi
        backend:
          serviceName: nifi
          servicePort: 8080
